@@ -46,6 +46,7 @@ Version 1.11.11+dev:
      menu actions. An actual fix of the bug requires refactoring of the
      animation code which will happen in Wesnoth 1.13.
    * OS X user data directory is now ~/Library/Application Support/Wesnoth_1.12
+   * Fix bug #21257: Lagging animations with skip AI animations and fog/shroud.
 
 Version 1.11.11:
  * Add-ons server:
